--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">gemReco - Recommends libraries you should know</a>
+          <a class="brand" href="<%= root_path %>">gemReco - Recommends libraries you should know</a>
         </div>
       </div>
     </div>
