--- a/app/views/upload/create.html.slim
+++ b/app/views/upload/create.html.slim
@@ -1,9 +1,12 @@
 p あなたにおすすめのライブラリは…
 
-- @recommendations.each do |item|
-  row-fluid
-    .span8 = item
-    a.span2 href="https://rubygems.org/gems/#{item}" target="_blank" Rubygems.org
-    a.span2 href="https://www.ruby-toolbox.com/projects/#{item}" target="_blank" Ruby toolbox
+- if @recommendations.size > 0
+  - @recommendations.each do |item|
+    .row-fluid
+      .span8 = item
+      a.span2 href="https://rubygems.org/gems/#{item}" target="_blank" Rubygems.org
+      a.span2 href="https://www.ruby-toolbox.com/projects/#{item}" target="_blank" Ruby toolbox
+- else
+  p 見つかりませんでした >_<
 
 a.back-to-top href=root_path トップへ戻る
