--- a/app/assets/stylesheets/upload.css.scss
+++ b/app/assets/stylesheets/upload.css.scss
@@ -2,8 +2,23 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.upload-btn {
-  margin: 80px auto;
-  max-width: 300px;
-  display: block
+.upload-index {
+  h1 {
+    text-align: center;
+    font-size: 80px;
+  }
+  .upload-btn {
+    margin: 20px auto;
+    max-width: 300px;
+    display: block
+  }
+
+  .neko-img {
+    display: block;
+    margin: 20px auto;
+  }
+
+  .desc {
+    text-align: center;
+  }
 }
